...

class EventsListScreen extends StatelessWidget {
  final String userId;
  final String name;
  final remoteRepo = EventRepoRemote();

  EventsListScreen({super.key, required this.userId, required this.name});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: Text('$name\'s Events')),
      body: FutureBuilder<List<EventModel>>(
...
                  onTap: () {
                    // Navigate to event details screen
                    Navigator.push(
                      context,
                      MaterialPageRoute(
                        builder: (context) => MyEventDetailsScreen(
                            key: Key("MyEventDetailsScreen"), event: event),
                      ),
                    );
                  },
                );
              },
            );
...
